# ocrplane-cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/ocr_mcp/: __init__.py  server.py
src/ocrplane/: __init__.py  cli.py  client.py  models.py
