[project]
name = "ocr-mcp"
version = "0.1.0"
description = "MCP wrapper for OcrPlane document OCR APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
]

[project.scripts]
ocr-mcp = "ocr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

