[project]
name = "ocrplane-cli"
version = "0.1.0"
description = "Agent-friendly CLI for OcrPlane document OCR APIs"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ocr", "mineru", "cli", "agent"]
dependencies = [
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/asharca/ocrplane-cli"
Repository = "https://github.com/asharca/ocrplane-cli"
Issues = "https://github.com/asharca/ocrplane-cli/issues"

[project.scripts]
ocrplane = "ocrplane.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrplane"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ocrplane",
  "README.md",
  "pyproject.toml",
]
